# Bapad

./: .gitignore  Bapad.md  README.md
Bapad/: Bapad.sln  MSRecommended_Plus_CoreGuidelines.ruleset  vcpkg.json
Bapad/Bapad/: Bapad.aps  Bapad.cpp  Bapad.h  Bapad.rc  Bapad.vcxproj  Bapad.vcxproj.filters  FileOperation.h  FontStruct.h  Options.cpp  OptionsFont.cpp  OptionsMisc.cpp  RCa18152  RDa10220  RDa18152  Resource.h  TextView.cpp  TextView.h  TextViewCtrChars.cpp  TextViewFile.cpp  TextViewFont.cpp  TextViewInput.cpp  TextViewKeyNav.cpp  TextViewMouse.cpp  TextViewPaint.cpp  TextViewScoll.cpp  TextViewWin32.h  framework.h  pch.h
Bapad/Bapad/Debug/: Bapad.res  vc142.idb
Bapad/Debug/: Bapad.ilk
Bapad/Sample-Test1/: Sample-Test1.vcxproj  test.cpp
Bapad/TextDocument/: FormatConversion.cpp  FormatConversion.h  FormatConversionV2.cpp  FormatConversionV2.h  MyException.h  PieceTree.cpp  PieceTree.h  TextDocument.cpp  TextDocument.h  TextDocument.ruleset  TextDocument.vcxproj  TextDocument.vcxproj.filters  framework.h  pch.h
Bapad/TextView/: FontStruct.h  FormatConversion.cpp  FormatConversion.h  Source.cpp  TextDocument.cpp  TextDocument.h  TextView.cpp  TextView.h  TextView.vcxproj  TextView.vcxproj.filters  TextViewCtrChars.cpp  TextViewFile.cpp  TextViewFont.cpp  TextViewMouse.cpp  TextViewPaint.cpp  TextViewScoll.cpp  TextViewWin32.h  lib.h  pch.h  test.cpp
Bapad/UnitTest/: FormatConversionTest.cpp  FormatConvertion.cpp  Source.cpp  UnitTest.vcxproj  pch.h  test.cpp
Bapad/UnitTests/: PieceTree_Tests.cpp  UnitTests.vcxproj
Bapad/x64/Debug/: Bapad++.ilk  Bapad.ilk  Sample-Test1.ilk  (+2 more)
BapadQt/: .gitignore  BapadQt.cpp  BapadQt.h  BapadQt.ui  CMakeLists.txt  TextView.cpp  TextView.h  main.cpp  vcpkg-configuration.json  vcpkg.json
(+54 files in other folders)
